fix: add vertical overflow to globaltoc panel

--- a/styles/_globaltoc.scss
+++ b/styles/_globaltoc.scss
@@ -3,6 +3,7 @@
 .globaltoc {
   @extend .iati-card;
   margin: $padding-block;
+  overflow-y: auto;
 
   @media (min-width: $screen-lg) {
     flex: 0 0 250px;
